:ok_hand: rm fix width & height for recommend: 「所有甜點」~「新品上市」不需要寫死寬度和高度，也不需要使用 flex 來置中。可以善用在 a 標籤使用上下的 padding 搭配 text-align: center; 來排版

--- a/styles/main.css
+++ b/styles/main.css
@@ -55,16 +55,18 @@ nav a {
     margin-right: 20px;
 }
 
-.products .categories h2,
+.products .categories>* {
+    width: 100%;
+    padding-top: 19.5px;
+    padding-bottom: 19.5px;
+    font-weight: 600;
+}
+
 .products .categories a {
-    width: 300px;
-    height: 65px;
-    display: flex;
+    box-sizing: border-box;
     border: 1px solid var(--second-color);
     color: var(--primary-color);
     text-decoration: none;
-    justify-content: center;
-    align-items: center;
 }
 
 .products .categories h2 {
